--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link id="app-theme"  href="saga-green.css"> -->
-  <link id="app-theme" rel="stylesheet" type="text/css" href="saga-green.css">
+  <link id="app-theme" rel="stylesheet" type="text/css" href="lara-dark-teal.css">
 </head>
 <body>
   <app-root></app-root>
